# Scrape-clothes-with-scrapy

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  scrapy.cfg
datakhi/: items.py  middlewares.py  selenium.py  settings.py  utils.py
datakhi/pipelines/: damart_pipeline.py  jules_pipeline.py  kiaby_pipeline.py
datakhi/spiders/: damart_scraper.py  jules_scraper.py  kiabi_scraper.py
