[project]
name = "datakhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.1.0",
    "scrapy-splash>=0.11.1",
    "scrapy>=2.12.0",
    "twisted>=24.11.0",
    "selenium>=4.31.0",
    "scrapy-selenium>=0.0.7",
    "scrapy-user-agents>=0.1.1",
    "tqdm>=4.67.1",
]
